--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="card mb-4 shadow-sm">
-                        <img src="./img/Blog.png" class="card-img-top img-fluid" style="height:260px;object-fit:cover;" alt="">
+                        <img src="./img/Blog.jpg" class="card-img-top img-fluid" style="height:260px;object-fit:cover;" alt="">
                         <div class="card-body">
                             <h5>Blog Website</h5>
                             <p class="card-text">An interactive blogging website for authors and readers and people who loves to write and express their ideas.</p>
@@ -72,7 +72,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="card mb-4 shadow-sm">
-                        <img src="./img/Forum.png" class="card-img-top img-fluid" style="height:260px;object-fit:cover;" alt="">
+                        <img src="./img/Forum.jpg" class="card-img-top img-fluid" style="height:260px;object-fit:cover;" alt="">
                         <div class="card-body">
                             <h5>Forum Website</h5>
                             <p class="card-text">A Forum website for interacting to other people with the topics that they like.</p>
