--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                                 <li>Laravel</li>
                                 <li>PHP</li>
                                 <li>Laravel Passport</li>
+                                <li>Laravel Sanctum</li>
                                 <li>Laravel Mix</li>
-                                <li>PHP Unit</li>
                             </ul>
                         </div>
                     </div>
@@ -143,7 +143,6 @@
                                 <li>Vue.js</li>
                                 <li>Vue Router</li>
                                 <li>Vuex</li>
-                                <li>Nuxt.js</li>
                             </ul>
                         </div>
                     </div>
@@ -180,7 +179,6 @@
                             <ul class="list-unstyled mt-3 mb-4">
                                 <li>MySQL</li>
                                 <li>MS SQL Server</li>
-                                <li>Stored Procedure</li>
                             </ul>
                         </div>
                     </div>
