--- a/index.html
+++ b/index.html
@@ -137,9 +137,11 @@
                         <div class="card-body">
                             <h1 class="card-title">
                                 <img src="./img/vue.png" class="mr-3 mb-3" width="50" alt="vue">
+                                <img src="./img/javascript.png" class="mr-3 mb-3" width="50" alt="vue">
                             </h1>
                             <ul class="list-unstyled mt-3 mb-4">
                                 <li>Vue.js</li>
+                                <li>Javascript</li>
                                 <li>Vue Router</li>
                                 <li>Vuex</li>
                             </ul>
@@ -157,6 +159,7 @@
                             </h1>
                             <ul class="list-unstyled mt-3 mb-4">
                                 <li>Bootstrap</li>
+                                <li>CSS</li>
                                 <li>Bulma</li>
                                 <li>Bootstrap-vue</li>
                                 <li>Buefy</li>
@@ -176,6 +179,7 @@
                                 <img src="./img/sqlserver.png" class="mr-3 mb-3" width="50" alt="sqlserver">
                             </h1>
                             <ul class="list-unstyled mt-3 mb-4">
+                                <li>SQL</li>
                                 <li>MySQL</li>
                                 <li>MS SQL Server</li>
                             </ul>
