--- a/index.html
+++ b/index.html
@@ -81,6 +81,24 @@
                     </div>
                     <div class="col-md-6">
                         <div class="card mb-4 shadow-sm">
+                        <img src="./img/Moviehub.jpg" class="card-img-top img-fluid" style="height:260px;object-fit:cover;" alt="">
+                        <div class="card-body">
+                            <h5>MovieHub</h5>
+                            <p class="card-text">SPA movie website powered by themoviedb API for backend</p>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-4 shadow-sm">
+                        <img src="./img/Newshub.jpg" class="card-img-top img-fluid" style="height:260px;object-fit:cover;" alt="">
+                        <div class="card-body">
+                            <h5>NewsHub</h5>
+                            <p class="card-text">SPA news website powered by newsapi API for backend</p>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-4 shadow-sm">
                         <img src="./img/Payroll.png" class="card-img-top img-fluid" style="height:260px;object-fit:cover;" alt="">
                         <div class="card-body">
                             <h5>Payroll System</h5>
